remove sonar issues